--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,10 @@
 img{
     height:100%;
 }
+/* Hero section */
+.hero{
+    background: url('../content/hero-bg1.svg'), url('../content/hero-bg2.png'),url('../content/hero-bg3.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
