--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,9 @@ h1{
 .white{
     color:white;
 }
+.grey{
+    color:rgba(255, 255, 255, 0.8);
+}
 /* Hero section */
 .hero{
     background: url('../content/hero-bg1.svg'), url('../content/hero-bg2.png'),url('../content/hero-bg3.jpg');
