--- a/styles/style.css
+++ b/styles/style.css
@@ -31,3 +31,9 @@ h1{
 .hero h1,.hero p{
     text-align: center;
 }
+.hero__img{
+    width:52px;
+    height:52px;
+    background: #4eb490;
+    border-radius: 50px;
+}
