--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,12 @@ h1{
     background-repeat: no-repeat;
     background-position: center;
 }
+.hero > .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
 .hero h1,.hero p{
     text-align: center;
 }
