--- a/styles/style.css
+++ b/styles/style.css
@@ -29,6 +29,7 @@ h1{
     background-position: center;
 }
 .hero > .container{
+    padding-top: 10%;
     display: flex;
     flex-direction: column;
     align-items: center;
