gave all elements word spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
     padding:0;
     margin:0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    word-spacing: 4px;
 }
 img{
     height:100%;
