--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ h2{
     background-position: center;
 }
 .hero > .container{
-    padding-top: 10%;
+    padding-bottom: 30%;
     display: flex;
     flex-direction: column;
     align-items: center;
