--- a/styles/style.css
+++ b/styles/style.css
@@ -76,3 +76,11 @@ h2{
 .info__img img{
     width:100%;
 }
+/* join us section */
+.join-us .container{
+    padding: 0 10%;
+    text-align: center;
+    display:flex;
+    flex-direction: column;
+    gap:15px;
+}
