--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,17 @@ h1{
     font-size:20px;
 }
 h2{
+    font-size:18px;
+}
+p{
     font-size:16px;
+}
+.input{
+    background-color: transparent;
+    border:solid 1px white;
+    border-radius: 2px;
+    width:100%;
+    resize: none;
 }
 .btn{
     border:none;
