gave color to input place holder and added padding

--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,10 @@ p{
     border-radius: 2px;
     width:100%;
     resize: none;
+    padding:10px;
+}
+.input::placeholder{
+    color:white;
 }
 .btn{
     border:none;
