--- a/styles/style.css
+++ b/styles/style.css
@@ -85,6 +85,8 @@ p{
 /* slogan */
 .slogan{
     text-align: center;
+    width: 50%;
+    margin: 0 auto;
 }
 /* info section */
 .info__card{
@@ -106,7 +108,6 @@ p{
 }
 /* join us section */
 .join-us .container{
-    padding-top: 0;
     padding-bottom: 10%;
     text-align: center;
     display:flex;
@@ -182,5 +183,27 @@ p{
     }
     .split-input{
         height:45px;
+    }
+}
+@media  screen and (min-width:900px) {
+    .container{
+        padding:15% 10% 0 10%;
+    }
+    .hero .container{
+        padding-inline:30%;
+        padding-bottom: 20%;
+    }
+    .hero__img{
+        width:91px;
+        height:91px;
+    }
+    h1{
+        font-size:34px;
+    }
+    h2{
+        font-size:24px;
+    }
+    p{
+        font-size: 18px;
     }
 }
